<resources>
    <string name="app_name">Shopper</string>
    <string name="action_home">Home</string>
    <string name="action_create_shopping_list">Create Shopping List</string>
    <string name="title_activity_create_list">Create Shopping List</string>
    <string name="name">Name</string>
    <string name="store">Store</string>
    <string name="date">Date</string>
    <string name="title_activity_veiw_list">Veiw List</string>
    <string name="action_add_item">Add Item</string>
    <string name="title_activity_add_item">Add Item</string>
    <string name="action_view_list">View List</string>
    <string-array name="quantities">
        <item></item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_view_item">View Item</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="delete_list">Delete List</string>
</resources>